--- a/Student_Backend/appsettings.json
+++ b/Student_Backend/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)mssqllocaldb; Database=StudentApiDb; Trusted_Connection=true;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=StudentApiDb; Trusted_Connection=true;"
   }
 }
